RESOLVED FIXED170980
[WinCairo] Fix build break after updating ANGLE
https://bugs.webkit.org/show_bug.cgi?id=170980
Summary [WinCairo] Fix build break after updating ANGLE
Fujii Hironori
Reported 2017-04-19 00:30:48 PDT
[WinCairo] Fix build break after updating ANGLE WinCairo port has been broken by updating ANGLE (Bug 170941). http://trac.webkit.org/changeset/215490
Attachments
WIP patch (8.80 KB, patch)
2017-04-19 00:32 PDT, Fujii Hironori
no flags
Patch (27.48 KB, patch)
2017-04-19 00:53 PDT, Fujii Hironori
no flags
Patch (17.12 KB, patch)
2017-04-19 19:59 PDT, Fujii Hironori
no flags
Patch (17.09 KB, patch)
2017-04-19 22:54 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2017-04-19 00:32:15 PDT
Created attachment 307467 [details] WIP patch
Fujii Hironori
Comment 2 2017-04-19 00:53:41 PDT
Brent Fulgham
Comment 3 2017-04-19 09:49:31 PDT
Comment on attachment 307468 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=307468&action=review It looks like dino already tried to fix a few of these things. Can you please update your patch to account for those conflicts? Otherwise I think this looks good! > Source/ThirdParty/ANGLE/src/third_party/murmurhash/LICENSE:2 > +// domain. The author hereby disclaims copyright to this source code. This is now conflicting with r215499. > Source/ThirdParty/ANGLE/src/third_party/murmurhash/MurmurHash3.cpp:335 > + This was landed in r215500. > Source/ThirdParty/ANGLE/src/third_party/murmurhash/MurmurHash3.h:37 > +#endif // _MURMURHASH3_H_ This conflicts with r215500.
Fujii Hironori
Comment 4 2017-04-19 19:59:52 PDT
Fujii Hironori
Comment 5 2017-04-19 22:30:47 PDT
Oops. AppleWin EWS failed: > LINK : fatal error LNK1181: cannot open input file 'libEGL.lib' [C:\cygwin\home\buildbot\WebKit\WebKitBuild\Release\Source\WebKit\WebKit.vcxproj]
Fujii Hironori
Comment 6 2017-04-19 22:54:37 PDT
Brent Fulgham
Comment 7 2017-04-20 12:59:26 PDT
Comment on attachment 307559 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=307559&action=review I think this looks good, but I'm worried this might break GTK. Can you confirm? Otherwise r=me. > Source/ThirdParty/ANGLE/CMakeLists.txt:-45 > - src/common/system_utils_linux.cpp Where did this go? Shouldn't it move to PlatformGTK or somewhere, like you did for Mac and Windows? > Source/WebCore/platform/graphics/PlatformDisplay.cpp:-192 > -#endif Oh, nice!
Fujii Hironori
Comment 8 2017-04-20 15:04:24 PDT
GTK port uses system ANGLE. So, no PlatformGTK.cmake. And, GTK EWS is green.
Alex Christensen
Comment 9 2017-04-20 15:52:33 PDT
Comment on attachment 307559 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=307559&action=review >> Source/ThirdParty/ANGLE/CMakeLists.txt:-45 >> - src/common/system_utils_linux.cpp > > Where did this go? Shouldn't it move to PlatformGTK or somewhere, like you did for Mac and Windows? GTK port uses WebCore/CMakeLists.txt. We need to remove this duplication, but they use ANGLE/libEGL/libGLESv2 differently than we do. This is part of why we need to use the ANGLE renderer on Mac
WebKit Commit Bot
Comment 10 2017-04-20 16:11:56 PDT
Comment on attachment 307559 [details] Patch Clearing flags on attachment: 307559 Committed r215585: <http://trac.webkit.org/changeset/215585>
WebKit Commit Bot
Comment 11 2017-04-20 16:11:57 PDT
All reviewed patches have been landed. Closing bug.
Fujii Hironori
Comment 12 2017-04-20 18:37:51 PDT
wincairo-1 BuildBot cann't compile the new ANGLE, while wincairo-2 can. I'm guessing VisualStudio 2015 Update 5 is needed for it. > ..\..\Source\ThirdParty\ANGLE\src\libANGLE\renderer\Format_table_autogen.cpp(28): error C2131: expression did not evaluate to a constant > C:\Users\Alex\Documents\WinCairoBot\win-cairo-release\build\Source\ThirdParty\ANGLE\src\libANGLE/renderer/Format.h(81): note: a non-constant (sub-)expression was encountered > ..\..\Source\ThirdParty\ANGLE\src\libANGLE\renderer\Format_table_autogen.cpp(153): fatal error C1903: unable to recover from previous error(s); stopping compilation
Alex Christensen
Comment 13 2017-04-21 15:23:58 PDT
As long as I'm updating, I updated my bot to Visual Studio 2017. Works fine.
Note You need to log in before you can comment on or make changes to this bug.