Source/WebCore/platform/graphics/opengl/Extensions3DOpenGLCommon.cpp
@@ -38,6 +38,7 @@
 #else
 #if USE(OPENGL_ES_2)
 #include "OpenGLESShims.h"
+#define GL_GLEXT_PROTOTYPES 1
 #include <GLES2/gl2.h>
 #include <GLES2/gl2ext.h>
 #elif PLATFORM(MAC)
