Source/WebCore/platform/graphics/opengl/TemporaryOpenGLSetting.cpp
@@ -30,6 +30,7 @@
 #include "TemporaryOpenGLSetting.h"
 
 #if USE(OPENGL_ES_2)
+#define GL_GLEXT_PROTOTYPES 1
 #include <GLES2/gl2.h>
 #include "OpenGLESShims.h"
 #elif PLATFORM(IOS)
