Source/WebCore/PlatformWin.cmake
@@ -318,4 +318,7 @@ set(WebCore_OUTPUT_NAME
 )
 
 list(APPEND WebCore_LIBRARIES WTF${DEBUG_SUFFIX})
+if (TARGET libEGL)
+    list(APPEND WebCore_LIBRARIES libEGL)
+endif ()
 list(APPEND WebCoreTestSupport_LIBRARIES WTF${DEBUG_SUFFIX})
